--- a/templates/query/outputs.html
+++ b/templates/query/outputs.html
@@ -1,26 +1,27 @@
 ﻿<div class="col-md-12 r">
-    <h3>Step 3: Select Output Fields</h3>
-    {{#each outputs}}
+    <h2>Step 3: Select Output Fields</h2>
+    <p class="step-desc">Options for output data fields are determined by the primary entity selected in step 1.</p>
+    {{#each this}}
     <div class="col-md-3">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <label for="category-{{id}}">
+                <label for="output-group-{{id}}">
                     {{#if isActive}}
-                    <input id="category-{{id}}" data-id="{{this.id}}" type="checkbox" class="check-all" checked="checked" /> {{this.category}}
+                    <input id="output-group-{{id}}" data-id="{{this.id}}" type="checkbox" class="check-all" checked="checked" /> {{this.name}}
                     {{else}}
-                    <input id="category-{{id}}" data-id="{{this.id}}" type="checkbox" class="check-all" /> {{this.category}}
+                    <input id="output-group-{{id}}" data-id="{{this.id}}" type="checkbox" class="check-all" /> {{this.name}}
                     {{/if}}
                 </label>
             </div>
-            <div class="panel-body">
-                <ul class="checkbox-list" data-category-id="{{this.id}}">
-                    {{#each this.subcategories}}
+            <div class="panel-body ">
+                <ul class="checkbox-list output-groups" data-output-group-id="{{this.id}}">
+                    {{#each this.fields}}
                     <li class="checkbox">
-                        <label for="output-{{id}}">
+                        <label for="output-group-{{id}}">
                             {{#if isActive}}
-                            <input id="output-{{id}}" type="checkbox" data-id="{{this.id}}" class="check" checked="checked"> {{this.name}}
+                            <input id="output-field-{{id}}" type="checkbox" data-id="{{this.id}}" class="check" checked="checked"> {{this.name}}
                             {{else}}
-                            <input id="output-{{id}}" type="checkbox" data-id="{{this.id}}" class="check"> {{this.name}}
+                            <input id="output-field-{{id}}" type="checkbox" data-id="{{this.id}}" class="check"> {{this.name}}
                             {{/if}}
                         </label>
                     </li>
