--- a/templates/query/results.html
+++ b/templates/query/results.html
@@ -1,42 +1,30 @@
 ﻿<div class="col-md-12 r">
-    <h3>Step 4: Customize Results</h3>
+    <h2>Step 4: Customize Results</h2>
+    <p class="step-desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
     <div class="row">
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     Sort Results By
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="height: 80px;">
                     <div class="row">
                         <div class="col-md-6">
-                            <label>
+                            <label for="group">
                                 Group
-                                <select id="group" class="form-control">
-                                    <option>-Select Group-</option>
-                                    {{#each lookups.groups}}
-                                    {{#if isActive}}
-                                    <option id="{{id}}" data-id="{{id}}" selected="selected">{{name}}</option>
-                                    {{else}}
-                                    <option id="{{id}}" data-id="{{id}}">{{name}}</option>
-                                    {{/if}}
-                                    {{/each}}
-                                </select>
                             </label>
+                            <select id="group" class="form-control">
+                                <option>-Select Group-</option>
+                            </select>
+
                         </div>
                         <div class="col-md-6">
-                            <label>
+                            <label for="field">
                                 Field
-                                <select id="field" class="form-control">
-                                    <option>-Select Field-</option>
-                                    {{#each lookups.fields}}
-                                    {{#if isActive}}
-                                    <option id="{{id}}" data-id="{{id}}" selected="selected">{{name}}</option>
-                                    {{else}}
-                                    <option id="{{id}}" data-id="{{id}}">{{name}}</option>
-                                    {{/if}}
-                                    {{/each}}
-                                </select>
                             </label>
+                            <select id="field" class="form-control">
+                                <option>-Select Field-</option>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -47,7 +35,7 @@
                 <div class="panel-heading">
                     Limit Search Results
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="height: 80px;">
                     <div class="list-inline">
                         <label for="resultCount">Limit search results to <input id="resultCount" type="text" class="form-control" placeholder="Enter number" value="{{resultCount}}" /> patents (maximum 10,000).</label>
                     </div>
@@ -64,10 +52,10 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-6">
-                            <label for="">
-                                Please enter the e-mail address where you want the resutsl delivered
-                                <input id="recipient" type="text" class="form-control" placeholder="Enter e-mail address" value="{{recipient}}" />
+                            <label for="recipient">
+                                Please enter the e-mail address where you want the results delivered
                             </label>
+                                <input id="recipient" type="text" class="form-control" placeholder="Enter e-mail address" value="{{recipient}}" />
                         </div>
                         <div class="col-md-6">
                             <label>Please select the desired file format(s) of your final results.</label>
