--- a/assets/sass/query.css
+++ b/assets/sass/query.css
@@ -2962,19 +2962,19 @@ select[multiple].input-lg,
 
 .btn-warning {
   color: #fff;
-  background-color: #e1dc54;
-  border-color: #ddd83e; }
+  background-color: #e17954;
+  border-color: #dd683e; }
   .btn-warning:hover, .btn-warning:focus, .btn-warning.focus, .btn-warning:active, .btn-warning.active, .open > .btn-warning.dropdown-toggle {
     color: #fff;
-    background-color: #d9d329;
-    border-color: #bdb821; }
+    background-color: #d95729;
+    border-color: #bd4a21; }
   .btn-warning:active, .btn-warning.active, .open > .btn-warning.dropdown-toggle {
     background-image: none; }
   .btn-warning.disabled, .btn-warning.disabled:hover, .btn-warning.disabled:focus, .btn-warning.disabled.focus, .btn-warning.disabled:active, .btn-warning.disabled.active, .btn-warning[disabled], .btn-warning[disabled]:hover, .btn-warning[disabled]:focus, .btn-warning[disabled].focus, .btn-warning[disabled]:active, .btn-warning[disabled].active, fieldset[disabled] .btn-warning, fieldset[disabled] .btn-warning:hover, fieldset[disabled] .btn-warning:focus, fieldset[disabled] .btn-warning.focus, fieldset[disabled] .btn-warning:active, fieldset[disabled] .btn-warning.active {
-    background-color: #e1dc54;
-    border-color: #ddd83e; }
+    background-color: #e17954;
+    border-color: #dd683e; }
   .btn-warning .badge {
-    color: #e1dc54;
+    color: #e17954;
     background-color: #fff; }
 
 .btn-danger {
@@ -4125,9 +4125,9 @@ a.label:hover, a.label:focus {
   cursor: pointer; }
 
 .label-default {
-  background-color: #a4a4a4; }
+  background-color: #536579; }
   .label-default[href]:hover, .label-default[href]:focus {
-    background-color: #8b8b8b; }
+    background-color: #3e4c5b; }
 
 .label-primary {
   background-color: #536579; }
@@ -4145,9 +4145,9 @@ a.label:hover, a.label:focus {
     background-color: #31b0d5; }
 
 .label-warning {
-  background-color: #e1dc54; }
+  background-color: #e17954; }
   .label-warning[href]:hover, .label-warning[href]:focus {
-    background-color: #d9d329; }
+    background-color: #d95729; }
 
 .label-danger {
   background-color: #b24646; }
@@ -4369,7 +4369,7 @@ a.thumbnail.active {
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent); }
 
 .progress-bar-warning {
-  background-color: #e1dc54; }
+  background-color: #e17954; }
   .progress-striped .progress-bar-warning {
     background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
     background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5635,6 +5635,102 @@ button.close {
 @media print {
   .hidden-print {
     display: none !important; } }
+/*!
+ * jQuery QueryBuilder 2.1.0
+ * Copyright 2014-2015 Damien "Mistic" Sorel (http://www.strangeplanet.fr)
+ * Licensed under MIT (http://opensource.org/licenses/MIT)
+ */
+.query-builder .rules-group-container, .query-builder .rule-container, .query-builder .rule-placeholder {
+  position: relative;
+  margin: 4px 0;
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid #b2cadd;
+  background: #f5f5f5; }
+
+.query-builder .rule-container .rule-filter-container,
+.query-builder .rule-container .rule-operator-container,
+.query-builder .rule-container .rule-value-container, .query-builder .error-container, .query-builder .drag-handle {
+  display: inline-block;
+  margin: 0 5px 0 0;
+  vertical-align: middle; }
+
+.query-builder .rules-group-container {
+  padding: 10px;
+  padding-bottom: 6px;
+  border: 1px solid #536579;
+  background: #fff; }
+  .query-builder .rules-group-container .rules-group-header {
+    margin-bottom: 10px; }
+    .query-builder .rules-group-container .rules-group-header input[name$=_cond] {
+      display: none; }
+  .query-builder .rules-group-container .rules-list {
+    list-style: none;
+    padding: 0 0 0 15px;
+    margin: 0; }
+.query-builder .rule-container .rule-value-container {
+  border-left: 1px solid #ddd;
+  padding-left: 5px; }
+  .query-builder .rule-container .rule-value-container label {
+    margin-bottom: 0;
+    font-weight: normal; }
+    .query-builder .rule-container .rule-value-container label.block {
+      display: block; }
+.query-builder .rule-container select, .query-builder .rule-container input[type=text], .query-builder .rule-container input[type=number] {
+  padding: 1px; }
+.query-builder .error-container {
+  display: none;
+  cursor: help;
+  color: #F00; }
+.query-builder .has-error {
+  background-color: #FDD;
+  border-color: #F99; }
+  .query-builder .has-error .error-container {
+    display: inline-block !important; }
+.query-builder .rules-list > *:before, .query-builder .rules-list > *:after {
+  content: '';
+  position: absolute;
+  left: -10px;
+  width: 10px;
+  height: calc(50% + 4px);
+  border-color: #CCC;
+  border-style: solid; }
+.query-builder .rules-list > *:before {
+  top: -4px;
+  border-width: 0 0 2px 2px; }
+.query-builder .rules-list > *:after {
+  top: 50%;
+  border-width: 0 0 0 2px; }
+.query-builder .rules-list > *:first-child:before {
+  top: -12px;
+  height: calc(50% + 14px); }
+.query-builder .rules-list > *:last-child:before {
+  border-radius: 0 0 0 4px; }
+.query-builder .rules-list > *:last-child:after {
+  display: none; }
+
+.query-builder .error-container + .tooltip .tooltip-inner {
+  color: #F99 !important; }
+
+.query-builder p.filter-description {
+  margin: 5px 0 0 0;
+  background: #D9EDF7;
+  border: 1px solid #BCE8F1;
+  color: #31708F;
+  border-radius: 5px;
+  padding: 2.5px 5px;
+  font-size: 0.8em; }
+
+.query-builder .drag-handle {
+  cursor: move;
+  vertical-align: middle;
+  margin-left: 5px; }
+.query-builder .dragged {
+  opacity: 0.5; }
+.query-builder .rule-placeholder {
+  border: 1px dashed #BBB;
+  opacity: 0.7; }
+
 .btn-circle {
   width: 49px;
   height: 49px;
@@ -5668,6 +5764,21 @@ button.close {
   text-align: center;
   font-size: 30px;
   border-radius: 70px; }
+
+.label-block {
+  padding: 6px 12px;
+  margin: 0;
+  border: 1px solid transparent;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+  min-width: 25px;
+  font-size: 85%; }
+
+.form-actions {
+  margin-bottom: 50px; }
 
 button.patent {
   background: url("../img/icon-ribbon.png") no-repeat center 5px #536579; }
@@ -5782,11 +5893,24 @@ ul.entity-list {
     background-color: #e17954;
     border-color: #d95729; }
 
+.equal, .equal > div[class*='col-'] {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex: 1 1 auto; }
+  .equal .panel, .equal > div[class*='col-'] .panel {
+    width: 100%; }
+
 .panel-body ul {
   padding-left: 0; }
 
 #resultCount {
   display: inline;
   width: 200px; }
+
+.review-results .row > div {
+  margin-bottom: 25px; }
 
 /*# sourceMappingURL=query.css.map */
