--- a/assets/sass/query.scss
+++ b/assets/sass/query.scss
@@ -1,5 +1,6 @@
 ﻿@import "stylesheets/bootstrap";
 @import "stylesheets/bootstrap-sprockets";
+@import "stylesheets/_queryBuilder.scss";
 
 //Move to layout mixin
 @mixin horizontal-list($list-margin: 0 8px 0 0) {
@@ -61,6 +62,23 @@
   text-align: center;
   font-size: 30px;
   border-radius: 70px;
+}
+
+.label-block {
+    padding: 6px 12px;
+    margin: 0;
+    border: 1px solid transparent;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+	min-width: 25px;
+	font-size: 85%;
+}
+
+.form-actions{
+	margin-bottom: 50px;
 }
 
 button.patent {
@@ -202,6 +220,20 @@ ul.entity-list {
 	}
 }
 
+.equal, .equal > div[class*='col-'] {  
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex:1 1 auto;
+
+	.panel {
+
+		width: 100%;
+	}
+}
+
 .panel-body{
 	ul{
 		padding-left:0;
@@ -212,3 +244,12 @@ ul.entity-list {
 	display: inline;
 	width: 200px;
 }
+
+
+.review-results{
+	.row > div {
+		margin-bottom: 25px;
+	}
+	
+}
+
