Added an event "entityChanged" to notify other views that the Primary Entity has changed.  Updated the review view to display the search criteria that the user has specified.

--- a/assets/sass/stylesheets/_queryBuilder.scss
+++ b/assets/sass/stylesheets/_queryBuilder.scss
@@ -86,6 +86,10 @@ $ticks-position: 5px, 10px !default;
       @extend %rule-component;
     }
 
+	.rule-operator-contianer{
+		border-left: $rule-value-separator;
+	}
+
     .rule-value-container {
       border-left: $rule-value-separator;
       padding-left: 5px;
