--- a/templates/query/review.html
+++ b/templates/query/review.html
@@ -24,8 +24,66 @@
                     <a href="#step/criteria" class="pull-right">Edit</a>
                 </div>
                 <div class="panel-body review-criteria">
-                    [Entity Here]
-                </div>
+                    
+                    <div class="query-builder form-inline">
+                        {{#each rules}}
+                        {{> part_rules}}
+                        {{/each}}
+                    </div>
+
+                        <!--<div id="builder" class="query-builder form-inline">
+            <dl class="rules-group-container">
+                <dt class="rules-group-header">
+                    <div class="btn-group group-conditions">
+                        <label class="label label-default">
+                            AND
+                        </label>
+                    </div>
+                </dt>
+                <dd class="rules-group-body">
+                    <ul class="rules-list">
+                        <li id="builder_rule_0" class="rule-container">
+                            <div class="rule-filter-container">
+                                <span class="label label-default">Field</span>
+                                [Group] - [Field Name]
+                            </div>
+                            <div class="rule-operator-container">
+                                [operator]
+                            </div>
+                            <div class="rule-value-container">
+                                [value]
+                            </div>
+                        </li>
+                        <dl class="rules-group-container">
+                            <dt class="rules-group-header">
+                                <div class="btn-group group-conditions">
+                                    <label class="label label-default">
+                                        AND
+                                    </label>
+                                </div>
+                            </dt>
+                            <dd class="rules-group-body">
+                                <ul class="rules-list">
+                                    <li id="builder_rule_0" class="rule-container">
+                                        <div class="rule-filter-container">
+                                            <span class="label label-default">Field</span>
+                                            [Field Name]
+                                        </div>
+                                        <div class="rule-operator-container">
+                                            [operator]
+                                        </div>
+                                        <div class="rule-value-container">
+                                            [value]
+                                        </div>
+                                    </li>
+                                </ul>
+                            </dd>
+                        </dl>
+                    </ul>
+                </dd>
+            </dl>
+        </div>-->
+                    </div>
             </div>
         </div>
     </div>
