Added a function call from the StepByStep object to look for an isValid() function to call on the View when the user triggers the event to navigate to the next and previous views.

--- a/assets/sass/stylesheets/_queryBuilder.scss
+++ b/assets/sass/stylesheets/_queryBuilder.scss
@@ -12,7 +12,7 @@ $item-border-radius: 5px !default;
 
 // groups
 $group-background-color: #fff !default;
-$group-border-color: #536579 !default;
+$group-border-color: #b2cadd !default;
 $group-border: 1px solid $group-border-color !default;
 $group-padding: 10px !default;
 
