--- a/assets/sass/stylesheets/_queryBuilder.scss
+++ b/assets/sass/stylesheets/_queryBuilder.scss
@@ -16,6 +16,9 @@ $group-border-color: #b2cadd !default;
 $group-border: 1px solid $group-border-color !default;
 $group-padding: 10px !default;
 
+// group buttons
+$active-background-color: #e17954;
+
 // rules
 $rule-background-color: #f5f5f5 !default;
 $rule-border-color: #b2cadd !default;
@@ -74,6 +77,13 @@ $ticks-position: 5px, 10px !default;
       padding: 0 0 0 #{nth($ticks-position, 1) + nth($ticks-position, 2)};
       margin: 0;
     }
+
+	.group-conditions {
+		.active {
+			background-color: $active-background-color;
+			border-color: darken($active-background-color, 10%);
+		}
+	}
   }
 
   // RULES
@@ -118,11 +128,12 @@ $ticks-position: 5px, 10px !default;
   }
 
   .has-error {
-    background-color: $error-background-color;
+    //background-color: $error-background-color;
     border-color: $error-border-color;
 
     .error-container {
-      display: inline-block !important;
+	  margin-top: 5px;
+      display: block !important;
     }
   }
 
@@ -164,3 +175,6 @@ $ticks-position: 5px, 10px !default;
 @import 'plugins/_bt-tooltip-errors';
 @import 'plugins/_filter-description';
 @import 'plugins/_sortable';
+
+
+
