Add new options to the solution, and a new criteria builder for Lawyer fields.

--- a/js/views/query/templates/SelectCriteriaAssignee.html
+++ b/js/views/query/templates/SelectCriteriaAssignee.html
@@ -11,6 +11,10 @@
     </div>
 </div>
 <div class="row">
+    <div class="col-md-12" id="lawyer-condition">
+    </div>
+</div>
+<div class="row">
     <div class="col-md-12">
         <h3>Technology Classifications</h3>
     </div>
