Latest rev2 updates.

--- a/assets/less/pvqt.less
+++ b/assets/less/pvqt.less
@@ -40,6 +40,10 @@ h2.select-category {
   margin-bottom: 3px;
 }
 
+nav > ul > li {
+    list-style-type: none;
+}
+
 .popover-content {
   padding: 9px 14px;
   font-size: 15px;
