--- a/js/views/query/templates/SelectCriteria.html
+++ b/js/views/query/templates/SelectCriteria.html
@@ -28,10 +28,10 @@
             </button>
         </div>
         <div class="col-lg-5 col-md-6">
-            <a class="btn btn-help pull-right" href="http://www.patentsview.org/querydev/query/faqs.html" target="_blank">
+            <a class="btn btn-help pull-right" href="https://www.patentsview.org/querydev/query/faqs.html" target="_blank">
                 <i class="fa fa-question-circle fa-3" aria-hidden="true"></i> Help
             </a>
-            <a class="btn-data-dict btn btn-help pull-right" href="http://www.patentsview.org/querydev/query/data_dictionary.html" target="_blank">
+            <a class="btn-data-dict btn btn-help pull-right" href="https://www.patentsview.org/querydev/query/data_dictionary.html" target="_blank">
                 View Data Dictionary
             </a>
         </div>
