--- a/js/views/query/templates/SelectResults.html
+++ b/js/views/query/templates/SelectResults.html
@@ -1,10 +1,10 @@
 ﻿<section class="col-md-12 intro">
     <div class="row">
         <div class="col-md-12 no-padding">
-            <a class="btn btn-help pull-right" href="http://www.patentsview.org/querydev/query/faqs.html" target="_blank">
+            <a class="btn btn-help pull-right" href="https://www.patentsview.org/querydev/query/faqs.html" target="_blank">
                 <i class="fa fa-question-circle fa-3" aria-hidden="true"></i> Help
             </a>
-            <a class="btn-data-dict btn btn-help pull-right" href="http://www.patentsview.org/querydev/query/data_dictionary.html" target="_blank">
+            <a class="btn-data-dict btn btn-help pull-right" href="https://www.patentsview.org/querydev/query/data_dictionary.html" target="_blank">
                 View Data Dictionary
             </a>
         </div>
