--- a/assets/less/pvqt.less
+++ b/assets/less/pvqt.less
@@ -3,7 +3,7 @@
 @import "pvqt-variables.less";
 @import "awesome-bootstrap-checkbox.less";
 @import "font-awesome-4.6.3/less/variables";
-@import "http:////fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700";
+@import "https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700";
 
 html {
     height: 100%;
