remove XML option and texts

--- a/js/views/query/templates/PreviewResults.html
+++ b/js/views/query/templates/PreviewResults.html
@@ -201,7 +201,7 @@
                 Please select the desired file format(s) of your final results.
               </div>
               <div class="input-group checkbox-group">
-                <div class="checkbox checkbox-primary checkbox-inline">
+                <!-- <div class="checkbox checkbox-primary checkbox-inline">
                   {{#if xml}}
                   <input
                     type="checkbox"
@@ -214,7 +214,7 @@
                   <input type="checkbox" id="xml" name="format" value="xml" />
                   {{/if}}
                   <label for="xml" class="control-label">XML</label>
-                </div>
+                </div> -->
                 <div class="checkbox checkbox-primary checkbox-inline">
                   {{#if json}}
                   <input
