remove XML options in preview and review tempaltes

--- a/js/views/query/templates/PreviewResults.html
+++ b/js/views/query/templates/PreviewResults.html
@@ -113,14 +113,14 @@
         <li>
           <a href="#preview-json" data-toggle="tab">JSON</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="#preview-xml" data-toggle="tab">XML</a>
-        </li>
+        </li> -->
       </ul>
       <div class="tab-content clearfix">
         <div class="tab-pane active" id="preview-csv"></div>
         <div class="tab-pane" id="preview-json"></div>
-        <div class="tab-pane" id="preview-xml"></div>
+        <!-- <div class="tab-pane" id="preview-xml"></div> -->
       </div>
     </div>
   </div>
